--- a/products/templates/products/quote_form.html
+++ b/products/templates/products/quote_form.html
@@ -35,7 +35,7 @@
                 {% csrf_token %} 
                 {{ form|crispy }}
                                 
-                <a href="javascript:getProductId();">Get Quote Detail</a>
+                <a class="btn btn-taupe rounded-1 text-white my-2" href="javascript:getProductId();">Get Quote Detail</a>
             </form>
             
         </div>
