--- a/templates/base.html
+++ b/templates/base.html
@@ -110,9 +110,9 @@
                 {% include 'includes/main-nav.html' %}
             </nav>
         </div>
-        <div id="delivery-banner" class="row text-center">
-            <div class="col bg-green text-white">
-                <h5 class="my-1">Free delivery nationwide on orders over €{{ free_delivery_threshold }}!</h5>                
+        <div id="delivery-banner" class="row text-center bg-ebony">
+            <div class="col text-white">
+                <h5 class="my-2">Free delivery nationwide on orders over €{{ free_delivery_threshold }}!</h5>                
             </div>            
         </div>
     </header>
@@ -141,7 +141,7 @@
     {% block content %}
     {% endblock %}
     
-    <footer class="bg-dark text-center text-white mt-5">
+    <footer class="bg-silver text-center text-white mt-5">
         <!-- Grid container -->
         <div class="container p-4 pb-0">
             <!-- Section: Form -->
