--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -21,8 +21,8 @@
                 </h1>
                 <div class="my-5">
                     <h4>
-                        <a href="{% url 'products' %}" class="shop-now-button btn text-uppercase py-3 mr-2">Shop Now</a>
-                        <a href="{% url 'product_quote_add' %}" class="quote-now-button btn text-uppercase py-3 ml-2">Get a Quote</a>
+                        <a href="{% url 'products' %}" class="shop-now-button btn text-uppercase py-3 mr-2 text-black font-weight-bold">Shop Online Now</a>
+                        <a href="{% url 'product_quote_add' %}" class="quote-now-button btn text-uppercase py-3 ml-2 text-black font-weight-bold">Get a Quote</a>
                     </h4>
                 </div>
             </div>
