--- a/templates/base.html
+++ b/templates/base.html
@@ -151,17 +151,15 @@
               <div class="row d-flex justify-content-center">
                 <!--Grid column-->
                 <div class="col-auto">
-                  <p class="pt-2">
-                    <strong>Newsletter Signup</strong>
-                  </p>
+                  <h5 class="pt-2">Newsletter Signup</h5>
                 </div>
                 <!--Grid column-->
       
                 <!--Grid column-->
                 <div class="col-md-5 col-12">
                   <!-- Email input -->
-                  <div class="form-outline form-white mb-4">
-                    <input type="email" id="form5Example29" class="form-control" placeholder="Enter your Email Address"/>
+                  <div class="form-outline form-white mb-4 text-light">
+                    <input type="email" id="form5Example29" class="form-control" placeholder="email address"/>
                   </div>
                 </div>
                 <!--Grid column-->
