--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col">
                 {% if bag_items %}
-                    <div class="table-responsive rounded">
+                    <div class="table-responsive rounded px-3">
                         <table class="table table-sm table-borderless">
                             <thead class="text-black">
                                 <tr>
