feat: add external link, meta tags and keywords to improve SEO

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,7 @@
         <div class="row mt-5 pt-5 background-hero">
             <div class="col-12 col-md-12 my-auto text-center">
                 <h1 class="display-5 text-white caption-background">
-                    Our team restore and sell furniture.
+                  Our team restore and sell furniture.
                 </h1>
                 <h1 class="display-5 text-white caption-background fade-in-text">
                   We can also help you with your restoration project.
@@ -41,12 +41,12 @@
           <div class="col-lg-2">
             <img class="img-thumbnail" src="{% get_media_prefix %}pexels-cottonbro-studio-4621912.png" alt="tina hayes upholsterer working with sewing machine">
             <h3  class="pt-3 text-muted">Tina Hayes</h3>
-            <p>Tina is a trained upholsterer who enjoys working with retro and modern pieces and bringing them back to life. </p>
+            <p>Tina is a trained upholsterer who enjoys repairing and restoring retro and modern pieces of furniture. </p>
           </div>
           <div class="col-lg-2">
             <img class="img-thumbnail" src="{% get_media_prefix %}pexels-anna-shvets-5710847.png" alt="olaf masterson upholsterer working with furniture">
             <h3  class="pt-3 text-muted">Olaf Masterson</h3>
-            <p>Olaf is a recent graduate of upholstery.  Olaf specialises in repairing and upholstering chairs.  He loves to create practical and durable pieces.</p>
+            <p>Olaf is a recent graduate of upholstery.  Olaf specialises in repairing and upholstering furniture.  He loves to create practical and durable pieces.</p>
           </div>
           <div class="col-lg-2">
             <img class="img-thumbnail" src="{% get_media_prefix %}pexels-los-muertos-crew-8447848.jpg" alt="alice bohan crafter restoring antique furniture">
