--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,16 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>Furniture Restoration Collective | Buy Restored Furniture | Your Furniture Restored</title>
+        <meta name="description"
+        content = "We sell restored furniture throughout Ireland.  We can also help with your restoration project.  
+        We repair and restore chairs, tables, sofas and bedroom furniture.">
+        <meta name="keywords"
+        content = "furniture restoration, restore and sell furniture, furniture repair ireland, repair damaged furniture, 
+        furniture restoration services, reupholster furniture, cost of reupholstering, 
+        vintage furniture restoration, antique furniture restoration, furniture restoration project,
+        furniture repair and restoration">
+        
     {% endblock %}
 
     {% block extra_meta %}
@@ -112,7 +122,7 @@
         </div>
         <div id="delivery-banner" class="row text-center bg-ebony">
             <div class="col text-white">
-                <h5 class="my-2">Free delivery nationwide on orders over €{{ free_delivery_threshold }}!</h5>                
+                <h5 class="my-2">Free delivery across Ireland on orders over €{{ free_delivery_threshold }}!</h5>                
             </div>            
         </div>
     </header>
@@ -207,12 +217,16 @@
             </section>
             <section class="mb-4">
                 <!-- Phone -->
-                    <i class="fa-solid fa-phone mr-1"></i>
-                    <a href="tel:353-1-1324354657" class="text-white">+353 1 1324354657</a>
+                <i class="fa-solid fa-phone mr-1"></i>
+                <a href="tel:353-1-1324354657" class="text-white">+353 1 1324354657</a>
                 <!-- Email -->
-                    <i class="fa-solid fa-envelope ml-3 mr-1"></i>
-                    <a href="mailto:furniturerestorationcollective@gmail.com" target="_blank" rel="noopener noreferrer" class="text-white">furniturerestorationcollective@gmail.com</a>
-                </section>
+                <i class="fa-solid fa-envelope ml-3 mr-1"></i>
+                <a href="mailto:furniturerestorationcollective@gmail.com" target="_blank" rel="noopener noreferrer" class="text-white">furniturerestorationcollective@gmail.com</a>
+            </section>
+                <p class="font-italic text-white">We are members of the <a href="https://www.dcci.ie/" target="_blank" rel="external" class="text-black">Desgn and Craft Council of Ireland.</a></p>
+            <section class="mb-4">
+
+            </section>
           <!-- Section: Form -->
         </div>
         <!-- Copyright -->
