feat: add Mailchimp embedded code to footer, head and script tags

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -15,6 +15,17 @@ ul {
     background-color: white;
 }
 
+/* Mailchimp */
+
+#mc_embed_signup {
+    background:#fff; 
+    clear:left; 
+    font:14px Helvetica,Arial,sans-serif;  
+    width:600px;
+}
+
+/* -- */
+
 .logo-font {
     text-transform: uppercase;
 }
