--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
-
+        <link rel="stylesheet" href="//cdn-images.mailchimp.com/embedcode/classic-071822.css"  type="text/css">
     {% endblock %}
 
     {% block extra_css %}
@@ -151,87 +151,108 @@
     {% block content %}
     {% endblock %}
     
-    <footer class="bg-silver text-center text-white mt-5">
+    
+
+    <footer class="bg-ebony text-white mt-5">
         <!-- Grid container -->
-        <div class="container p-4 pb-0">
+        
+
+        <div class="container p-4 pb-0 align-items-center">
             <!-- Section: Form -->
-            <section class="">
-            <form action="">
-              <!--Grid row-->
-              <div class="row d-flex justify-content-center">
-                <!--Grid column-->
-                <div class="col-auto">
-                  <h5 class="pt-2">Newsletter Signup</h5>
+            <section class="" >
+                            <!-- Begin Mailchimp Signup Form -->
+                <div class="row">
+                    <div class="col-12 page-header mb-4">
+                        <h2 class="text-uppercase text-center">Stay in touch with us</h2>
+                        <hr class="block-divider block-divider--short">
+                    </div>
                 </div>
-                <!--Grid column-->
-      
-                <!--Grid column-->
-                <div class="col-md-5 col-12">
-                  <!-- Email input -->
-                  <div class="form-outline form-white mb-4 text-light">
-                    <input type="email" id="form5Example29" class="form-control" placeholder="email address"/>
-                  </div>
+                <div class="row justify-content-center">
+                    <div class="col-12 col-md-4">
+                        <h3 class="mb-1">Social</h3>
+                        <p>Find out more about us, our crafters, and our products.</p>
+                            <!-- Facebook -->
+                            <a
+                            class="btn text-white btn-floating m-1"
+                            style="background-color: #3b5998;"
+                            href="https://www.facebook.com/profile.php?id=100091862172437"
+                            role="button" target="_blank" rel="noopener"
+                            aria-label="Visit our Facebook page (opens in a new tab)"
+                            ><i class="fab fa-facebook-f"></i
+                            ></a>
+                            <!-- Pinterest -->
+                            <a
+                            class="btn text-white btn-floating m-1"
+                            style="background-color: #55acee;"
+                            href="https://www.pinterest.com/"
+                            role="button" target="_blank" rel="noopener"
+                            aria-label="Visit our Pinterest page (opens in a new tab)"
+                            ><i class="fab fa-pinterest"></i
+                            ></a>
+                            <!-- Instagram -->
+                            <a
+                            class="btn text-white btn-floating m-1"
+                            style="background-color: #ac2bac;"
+                            href="https://www.instagram.com/"
+                            role="button" target="_blank" rel="noopener"
+                            aria-label="Visit our Instagram page (opens in a new tab)"
+                            ><i class="fab fa-instagram"></i
+                            ></a>
+                            <div class="mt-3">
+                                <h3 class="mb-2">Contact</h3>
+                                <!-- Phone -->
+                                <i class="fa-solid fa-phone mr-1"></i>
+                                <a href="tel:353-1-1324354657" class="text-white">+353 1 1324354657</a>
+                                <!-- Email -->
+                                <i class="fa-solid fa-envelope ml-3 mr-1"></i>
+                                <a href="mailto:furniturerestorationcollective@gmail.com" target="_blank" rel="noopener noreferrer" class="text-white mb-3">furniturerestorationcollective@gmail.com</a>
+                            </div>
+                    </div>
+                    <div class="col-12 col-md-4 bg-ebony">
+                        <h3>Subscribe!</h3>
+                        <p>We will send you all the latest news and some great offers!</p>
+                        <div id="mc_embed_signup" class="bg-ebony pl-0">
+                            <form action="https://herokuapp.us11.list-manage.com/subscribe/post?u=3e49cb8f5abd3f1ad0b6172f4&amp;id=8a84f45b80&amp;f_id=001a9ae0f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                                <div class="row d-flex bg-ebony">
+                                    <div id="mc_embed_signup_scroll"  class="bg-ebony p-0">
+                                        
+                                        <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                                        <div class="mc-field-group">
+                                            <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span></label>
+                                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required>
+                                            <span id="mce-EMAIL-HELPERTEXT" class="helper_text bg-ebony"></span>
+                                        </div>
+                                        <div id="mce-responses" class="clear foot">
+                                            <div class="response" id="mce-error-response" style="display:none"></div>
+                                            <div class="response" id="mce-success-response" style="display:none"></div>
+                                        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3e49cb8f5abd3f1ad0b6172f4_8a84f45b80" tabindex="-1" value=""></div>
+                                        <div class="optionalParent">
+                                            <div class="clear foot">
+                                            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+                                            <p class="brandingLogo"><a href="http://eepurl.com/ipgVi2" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <!--End mc_embed_signup-->
+                    </div>
                 </div>
-                <!--Grid column-->
-      
-                <!--Grid column-->
-                <div class="col-auto">
-                  <!-- Submit button -->
-                  <button type="submit" class="btn btn-outline-light mb-4">
-                    Subscribe
-                  </button>
-                </div>
-                <!--Grid column-->
-              </div>
-              <!--Grid row-->
-            </form>
+                
             </section>
-            <section class="mb-4">
-                <!-- Facebook -->
-                <a
-                  class="btn text-white btn-floating m-1"
-                  style="background-color: #3b5998;"
-                  href="https://www.facebook.com/profile.php?id=100091862172437"
-                  role="button" target="_blank" rel="noopener"
-                  aria-label="Visit our Facebook page (opens in a new tab)"
-                  ><i class="fab fa-facebook-f"></i
-                ></a>
-                <!-- Pinterest -->
-                <a
-                  class="btn text-white btn-floating m-1"
-                  style="background-color: #55acee;"
-                  href="https://www.pinterest.com/"
-                  role="button" target="_blank" rel="noopener"
-                  aria-label="Visit our Pinterest page (opens in a new tab)"
-                  ><i class="fab fa-pinterest"></i
-                ></a>
-                <!-- Instagram -->
-                <a
-                  class="btn text-white btn-floating m-1"
-                  style="background-color: #ac2bac;"
-                  href="https://www.instagram.com/"
-                  role="button" target="_blank" rel="noopener"
-                  aria-label="Visit our Instagram page (opens in a new tab)"
-                  ><i class="fab fa-instagram"></i
-                ></a>
-            </section>
-            <section class="mb-4">
-                <!-- Phone -->
-                <i class="fa-solid fa-phone mr-1"></i>
-                <a href="tel:353-1-1324354657" class="text-white">+353 1 1324354657</a>
-                <!-- Email -->
-                <i class="fa-solid fa-envelope ml-3 mr-1"></i>
-                <a href="mailto:furniturerestorationcollective@gmail.com" target="_blank" rel="noopener noreferrer" class="text-white">furniturerestorationcollective@gmail.com</a>
-            </section>
-                <p class="font-italic text-white">We are members of the <a href="https://www.dcci.ie/" target="_blank" rel="external" class="text-black">Desgn and Craft Council of Ireland.</a></p>
-            <section class="mb-4">
+            
+            <section class="mb-4 mt-4 text-center">
+                
+                <p class="font-italic text-white">We are members of the <a href="https://www.dcci.ie/" target="_blank" rel="external">Design and Craft Council of Ireland.</a></p>
+           
 
             </section>
           <!-- Section: Form -->
         </div>
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-          © 2020 Copyright:
+          © 2023 Copyright:
           <a class="text-white">TBowe</a>
         </div>
         <!-- Copyright -->
@@ -241,6 +262,9 @@
         <script type="text/javascript">
             $('.toast').toast('show');
         </script>
+        <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+        <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+                
     {% endblock %}
     
   </body>
