style: add styling to 404 error page

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,45 @@
 <html>
+<head>
+<title>404 Error Page | Furniture Restoration Collective</title>
+<link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
+<style>
+h1{
+font-size:80px;
+font-weight:800;
+text-align:center;
+font-family: 'Roboto', sans-serif;
+}
+h2
+{
+font-size:25px;
+text-align:center;
+font-family: 'Roboto', sans-serif;
+margin-top:-40px;
+}
+p{
+text-align:center;
+font-family: 'Roboto', sans-serif;
+font-size:18px;
+}
+
+.container
+{
+width:500px;
+margin: 0 auto;
+margin-top:15%;
+}
+</style>
+
+</head>
 
 <body>
-    <h1>Page not Found</h1>
-</body>
+    <div class="container">
+        <h2>FURNITURE RESTORATION COLLECTIVE </h2>
+        <h1>404</h1>
+        <h2>Page Not Found</h2>
+        <p>The page you are looking for doesn't exist or another error occured.</p> 
+        <p>Please go to the <a href="https://furniture-restoration.herokuapp.com/">Home Page.</a></p>
+    </div>
 
+</body>
 </html>
