--- a/templates/base.html
+++ b/templates/base.html
@@ -167,9 +167,9 @@
                         <hr class="block-divider block-divider--short">
                     </div>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="col-12 col-md-4">
-                        <h3 class="mb-1">Social</h3>
+                <div class="row">
+                    <div class="col-12 col-md-5 offset-md-1 mb-5">
+                        <h3 class="mb-2">Social</h3>
                         <p>Find out more about us, our crafters, and our products.</p>
                             <!-- Facebook -->
                             <a
@@ -198,20 +198,20 @@
                             aria-label="Visit our Instagram page (opens in a new tab)"
                             ><i class="fab fa-instagram"></i
                             ></a>
-                            <div class="mt-3">
-                                <h3 class="mb-2">Contact</h3>
+                            <div class="mt-5">
+                                <h3>Contact</h3>
                                 <!-- Phone -->
                                 <i class="fa-solid fa-phone mr-1"></i>
                                 <a href="tel:353-1-1324354657" class="text-white">+353 1 1324354657</a>
                                 <!-- Email -->
                                 <i class="fa-solid fa-envelope ml-3 mr-1"></i>
-                                <a href="mailto:furniturerestorationcollective@gmail.com" target="_blank" rel="noopener noreferrer" class="text-white mb-3">furniturerestorationcollective@gmail.com</a>
+                                <a href="mailto:furniturerestorationcollective@gmail.com" target="_blank" rel="noopener noreferrer" class="text-white">furniturerestorationcollective@gmail.com</a>
                             </div>
                     </div>
-                    <div class="col-12 col-md-4 bg-ebony">
+                    <div class="col-12 col-md-6 bg-ebony">
                         <h3>Subscribe!</h3>
                         <p>We will send you all the latest news and some great offers!</p>
-                        <div id="mc_embed_signup" class="bg-ebony pl-0">
+                        <div id="mc_embed_signup" class="bg-ebony pl-0 col-6">
                             <form action="https://herokuapp.us11.list-manage.com/subscribe/post?u=3e49cb8f5abd3f1ad0b6172f4&amp;id=8a84f45b80&amp;f_id=001a9ae0f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                 <div class="row d-flex bg-ebony">
                                     <div id="mc_embed_signup_scroll"  class="bg-ebony p-0">
