style: improve styling for mobile on hero text and navbar

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,16 +13,16 @@
     <div class="container">
         <div class="row mt-5 pt-5 background-hero">
             <div class="col-12 col-md-12 my-auto text-center">
-                <h1 class="display-5 text-white caption-background">
+                <h1 class="text-responsive display-5 pt-5 text-white caption-background">
                   Our team restore and sell furniture.
                 </h1>
-                <h1 class="display-5 text-white caption-background fade-in-text">
+                <h1 class="text-responsive display-5 text-white caption-background fade-in-text">
                   We can also help you with your restoration project.
                 </h1>
                 <div class="my-5">
                     <h4>
-                        <a href="{% url 'products' %}" class="shop-now-button btn text-uppercase py-3 mr-2 text-black font-weight-bold">Shop Online Now</a>
-                        <a href="{% url 'product_quote_add' %}" class="quote-now-button btn text-uppercase py-3 ml-2 text-black font-weight-bold">Get a Quote</a>
+                        <a href="{% url 'products' %}" class="shop-now-button btn text-uppercase py-3 text-black font-weight-bold mb-3">Shop Online Now</a>
+                        <a href="{% url 'product_quote_add' %}" class="quote-now-button btn text-uppercase py-3 text-black font-weight-bold mb-3">Get a Quote</a>
                     </h4>
                 </div>
             </div>
