--- a/products/templates/products/product_review_form.html
+++ b/products/templates/products/product_review_form.html
@@ -31,8 +31,8 @@
                 {% csrf_token %}
                 {{ form|crispy }}
                 <div class="text-right">
-                    <a class="btn btn-outline-black rounded-0" href="{% url 'profile' %}">Cancel</a>
-                    <button class="btn btn-black rounded-0" type="submit">Add Review</button>
+                    <a class="btn btn-select-white rounded" href="{% url 'profile' %}">Cancel</a>
+                    <button class="btn btn-select-taupe rounded" type="submit">Add Review</button>
                 </div>
             </form>
         </div>
