--- a/products/templates/products/quote_form.html
+++ b/products/templates/products/quote_form.html
@@ -38,7 +38,7 @@
                 {% csrf_token %} 
                 {{ form|crispy }}
                                 
-                <a class="btn btn-taupe rounded-1 text-white my-2 text-uppercase" href="javascript:getProductId();">Get Quote Detail</a>
+                <a class="btn btn-select-taupe rounded-1 my-2 text-uppercase" href="javascript:getProductId();">Get Quote Detail</a>
             </form>
             
         </div>
