--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -83,13 +83,13 @@
                             </div>
 
                             <div class="col-12">
-                                <a href="{% url 'products' %}" class="btn btn-outline-green rounded-1 mt-5">
+                                <a href="{% url 'products' %}" class="btn btn-select-white rounded-1 mt-5">
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
                                     </span>
                                     <span class="text-uppercase">Keep Shopping</span>
                                 </a>
-                                <input type="submit" class="btn btn-outline-green rounded-1 text-uppercase mt-5" value="Add to Bag">
+                                <input type="submit" class="btn btn-select-taupe rounded-1 text-uppercase mt-5" value="Add to Bag">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
