--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -12,8 +12,8 @@
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
         {{ form|crispy }}
-        <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
+        <a class="btn btn-select-white rounded" href="{% url 'account_login' %}">Back to Login</a>
+        <button type="submit" class="btn btn-select-white rounded" name="action">{% trans "Change Password" %}</button>
     </form>
 {% endblock %}
 
