docs: add features to readme and additional button styling

--- a/products/templates/products/product_review_form.html
+++ b/products/templates/products/product_review_form.html
@@ -20,11 +20,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Product Review</title>
+    <hr>
+        <h2 class="logo-font mb-4 text-center">Product Review</h2>
+    <hr>
 </head>
 
 <body>
-<h2>Product Review</h2>
     <div class="row">
         <div class="col-md-8 mt-3 mb-5 offset-md-2">
             <form method="POST" action="{% url 'review_products' %}" class="form mb-2" enctype="multipart/form-data">
