--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -18,7 +18,7 @@
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
   <a class="btn btn-select-white rounded" href="{% url 'account_login' %}">Back to Login</a>
-  <button type="submit" class="btn-select-taupe rounded">{% trans "Sign Up" %}</button>
+  <button type="submit" class="btn btn-taupe text-white rounded">{% trans "Sign Up" %}</button>
 </form>
 
 {% endblock %}
