--- a/templates/base.html
+++ b/templates/base.html
@@ -229,7 +229,7 @@
                                         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3e49cb8f5abd3f1ad0b6172f4_8a84f45b80" tabindex="-1" value=""></div>
                                         <div class="optionalParent">
                                             <div class="clear foot">
-                                            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+                                            <input class="btn bg-saffron text-uppercase border-0 text-black font-weight-bold ml-0 mr-1 mt-0" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">
                                             <p class="brandingLogo"><a href="http://eepurl.com/ipgVi2" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p>
                                         </div>
                                     </div>
