--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -32,7 +32,7 @@
                 <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button class="btn btn-select-taupe rounded text-uppercase float-right">Update Information</button>
+                    <button class="btn btn-select-taupe rounded float-right">Update Information</button>
                 </form>
             </div>
             <div class="col-12 col-lg-6">
