--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -46,7 +46,7 @@
             <div><i class="fa-solid fa-cart-shopping fa-lg"></i></div>
             <p class="my-0">&#8364;
                 {% if grand_total %}
-                    ${{ grand_total|floatformat:2 }}
+                    {{ grand_total|floatformat:2 }}
                 {% else %}
                     0.00
                 {% endif %}
