--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -66,6 +66,6 @@
             <p class="mb-3 mt-3 text-center font-italic">"{{ r.comment }}"</p>
           {% endif %}
         {% endfor %}
-        
+    </div>    
 {% endblock %}
 
