chore: edit html files following nu html checker results

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -19,10 +19,10 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font nav-link text-black mr-5" href="#" id="living-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Living
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
+            <div class="dropdown-menu border-0" aria-labelledby="living-link">
                 <a href="{% url 'products' %}?category=sofas" class="dropdown-item">Sofas</a>
                 <a href="{% url 'products' %}?category=shelving_bookcases" class="dropdown-item">Shelving &amp; Book Cases</a>
                 <a href="{% url 'products' %}?category=side_tables" class="dropdown-item">Side Tables</a>
@@ -31,10 +31,10 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font nav-link text-black mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font nav-link text-black mr-5" href="#" id="dining-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Dining
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
+            <div class="dropdown-menu border-0" aria-labelledby="dining-link">
                 <a href="{% url 'products' %}?category=chairs" class="dropdown-item">Chairs</a>
                 <a href="{% url 'products' %}?category=dining_set" class="dropdown-item">Table &amp; Chairs</a>
                 <a href="{% url 'products' %}?category=side_boards" class="dropdown-item">Side Boards</a>
@@ -43,10 +43,10 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font nav-link text-black mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font nav-link text-black mr-5" href="#" id="bedroom-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Bedroom
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
+            <div class="dropdown-menu border-0" aria-labelledby="bedroom-link">
                 <a href="{% url 'products' %}?category=beds" class="dropdown-item">Beds</a>
                 <a href="{% url 'products' %}?category=wardrobes" class="dropdown-item">Wardrobes</a>
                 <a href="{% url 'products' %}?category=dressing_tables" class="dropdown-item">Dressing Tables</a>
@@ -56,10 +56,10 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font nav-link text-black mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font nav-link text-black mr-5" href="#" id="commercial-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Commercial
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
+            <div class="dropdown-menu border-0" aria-labelledby="commercial-link">
                 <a href="{% url 'products' %}?category=chairs" class="dropdown-item">Chairs</a>
                 <a href="{% url 'products' %}?category=sofas" class="dropdown-item">Sofas</a>
                 <a href="{% url 'products' %}?category=side_boards" class="dropdown-item">Side Boards</a>
