--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
                 </a>
             </div>
             <div class="col-12 col-lg-6 my-auto py-1 py-lg-0">
-                <ul class="list-inline list-unstyled d-flex align-items-center justify-content-end">
+                <ul class="list-unstyled d-flex align-items-center justify-content-end">
                     <li class="list-inline-item">
                         <form method="GET" action="{% url 'products' %}">
                             <div class="input-group">
@@ -75,13 +75,13 @@
                         </form>
                     </li>
                     <li class="list-inline-item dropdown">
-                        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="text-black nav-link" href="#" aria-labelledby="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <div class="text-center">
                                 <div><i class="fas fa-user fa-lg"></i></div>
                                 <p class="my-0">Account</p>
                             </div>
                         </a>
-                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                        <div class="dropdown-menu border-0" id="user-options" >
                             {% if request.user.is_authenticated %}
                                 {% if request.user.is_superuser %}
                                     <a href="{% url 'list_products' %}" class="dropdown-item">Product Management</a>
@@ -230,7 +230,7 @@
                                         <div class="optionalParent">
                                                 <div class="clear foot">
                                                 <input class="btn bg-saffron text-uppercase border-0 text-black font-weight-bold ml-0 mr-1 mt-0" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">
-                                                <p class="brandingLogo"><a href="http://eepurl.com/ipgVi2" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p>
+                                                <p class="brandingLogo"><a href="http://eepurl.com/ipgVi2" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg" alt="mailchimp branding logo dark text"></a></p>
                                             </div>
                                         </div>
                                     </div>
