--- a/products/templates/products/quote_form.html
+++ b/products/templates/products/quote_form.html
@@ -15,7 +15,7 @@
 
 <div class="overlay"></div>
     <div class="container-fluid">
-        <title>Product Custom Quote</title>
+        <h2 class="logo-font">Custom Quote Form</h2>
 
         <div class="col text-center mt-3">
             <hr class="w-50 mb-1">
