--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,7 +7,7 @@ ul {
 }
 
 .background-hero {
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.05)), url('/media/julian-hochgesang-4DqsMC4-QQc-unsplash.jpg') no-repeat center;
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.05)), url('/media/julian-hochgesang-4DqsMC4-QQc-unsplash.webp') no-repeat center;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
