--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -2,8 +2,8 @@
     <li class="list-inline-item text-white">
         <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <div class="text-center">
-                <div><i class="fas fa-search fa-lg"></i></div>
-                <p class="my-0">Search</p>
+                <div><i class="fas fa-search fa-lg fs-sm"></i></div>
+                <p class="my-0 small">Search</p>
             </div>
         </a>
         <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
@@ -13,7 +13,7 @@
                     <div class="input-group-append">
                         <button class="form-control form-control btn btn-black border border-black rounded-0" type="submit">
                             <span class="icon">
-                                <i class="fas fa-search"></i>
+                                <i class="fas fa-search fa-sm"></i>
                             </span>
                         </button>
                     </div>
@@ -24,8 +24,8 @@
     <li class="list-inline-item dropdown text-white">
         <a class="text-black nav-link d-block d-lg-none" href="#" aria-labelledby="user-account-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <div class="text-center">
-                <div><i class="fas fa-user fa-lg"></i></div>
-                <p class="my-0">Account</p>
+                <div><i class="fas fa-user"></i></div>
+                <p class="my-0 small">Account</p>
             </div>
         </a>
         <div class="dropdown-menu border-0" id="user-account-options">
@@ -44,8 +44,8 @@
     <li class="list-inline-item text-white">
         <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_bag' %}">
             <div class="text-center">
-                <div><i class="fa-solid fa-cart-shopping fa-lg"></i></div>
-                <p class="my-0">&#8364;
+                <div><i class="fa-solid fa-cart-shopping"></i></div>
+                <p class="my-0 small">&#8364;
                     {% if grand_total %}
                         {{ grand_total|floatformat:2 }}
                     {% else %}
